# qiskit-bip-mapper

./: .gitignore  .stestr.conf  CITATION.bib  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  release.yml
qiskit_bip_mapper/: __init__.py  bip_mapping.py  bip_model.py  plugin.py
qiskit_bip_mapper/tests/: __init__.py  test_bip_mapping.py  test_plugin.py
