[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta" 

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
select = ["E", "F", "D", "W", "UP"]
ignore = ["D100"]
line-length = 105
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"
