[metadata]
name = qiskit-bip-mapper
summary =  
description-file =
    README.md
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
requires-python = >=3.6

[files]
packages =
    qiskit_bip_mapper
    bqskit_plugin

[entry_points]
qiskit.transpiler.routing =
    bqskit = qiskit_bip_mapper.plugin:BIPMappingPlugin
