[metadata]
name = qiskit-bip-mapper
summary = A Qiskit transpiler plugin for BIPMapping
description-file =
    README.md
author = Toshinari Itoko, Giacomo Nannicini
author-email = itoko@jp.ibm.com, nannicini@us.ibm.com
home_page = https://github.com/qiskit-community/qiskit-bip-mapper
project_urls =
    Bug Tracker = https://github.com/qiskit-community/qiskit-bip-mapper/issues
license = Apache-2
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
requires-python = >=3.8

[files]
packages =
    qiskit_bip_mapper

[entry_points]
qiskit.transpiler.routing =
    bip = qiskit_bip_mapper.plugin:BIPMappingPlugin
